'Reroute' from 'Layout' in compositor causes no output from viewer #39848

Closed
opened 2014-04-23 01:09:21 +02:00 by Joel Godin · 8 comments

System Information
OSX Mavericks 10.9.2
AMD Radeon HD 6770M 512Mb
2.7 Ghz Intel Core i5
32 GB Ram

Blender Version
Broken: 2.70 3677224 and 2.70 b4cb467
Worked: 2.70 52a5d58

Short description of error

Exact steps for others to reproduce the error
In compositor add 'viewer' node.
Add Layout > reroute on line from render layers to Comp
Drag noodle from that reroute to viewer node
Render.

Output: No render, no backdrop image when checked. To get output, drag anything from Render layers node, like Z or Alpha and just drop it (causes refresh), then image shows up.

reroutebug.blend

**System Information** OSX Mavericks 10.9.2 AMD Radeon HD 6770M 512Mb 2.7 Ghz Intel Core i5 32 GB Ram **Blender Version** Broken: 2.70 3677224 and 2.70 b4cb467 Worked: 2.70 52a5d58 **Short description of error** **Exact steps for others to reproduce the error** In compositor add 'viewer' node. Add Layout > reroute on line from render layers to Comp Drag noodle from that reroute to viewer node Render. Output: No render, no backdrop image when checked. To get output, drag anything from Render layers node, like Z or Alpha and just drop it (causes refresh), then image shows up. [reroutebug.blend](https://archive.blender.org/developer/F85685/reroutebug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @joel.godin

Added subscriber: @joel.godin
Lukas Tönne was assigned by Bastien Montagne 2014-04-23 16:53:47 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Lukas, care to check this one? thanks.

Lukas, care to check this one? thanks.

This issue was referenced by blender/blender-addons-contrib@ad6d897d98

This issue was referenced by blender/blender-addons-contrib@ad6d897d98ce8c8ad31c37da7f4faafbbb11ef95

This issue was referenced by ad6d897d98

This issue was referenced by ad6d897d98ce8c8ad31c37da7f4faafbbb11ef95
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit ad6d897d98.

Closed by commit ad6d897d98.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39848
No description provided.