Fix T39848: Reroute nodes were not handled properly after compositor cleanup patch.

These simply need a proxy node, which will be replaced by direct
operation links afterward.